--- a/index.css
+++ b/index.css
@@ -38,8 +38,8 @@ header {
 }
 
 nav ul {
-    /* visibility: hidden; */
-    /* opacity: 0; */
+    visibility: hidden;
+    opacity: 0;
     position: fixed;
     width: 100%;
     top: 0;
@@ -63,4 +63,76 @@ nav ul li a {
     position: absolute;
     top: 0;
     right: 0;
+}
+.open-nav {
+  visibility: unset;
+  opacity: 1;
+  transform: translateX(0);
+}
+.forest-hero {
+  background: url("images/forest.jpg");
+  background-size: cover;
+  color: white;
+}
+.wrapper {
+  padding: .5em;
+  text-align: center;
+}
+.no-padding {
+  padding: 0;
+}
+.subtitle {
+  padding: 3em 0 .5em;
+}
+h1 span {
+  display: block;
+  /* clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%); */
+}
+.cta {
+  display: inline-block;
+  padding: 1em;
+  background: #72A84A;
+  font-weight: bold;
+  color:white ;
+  margin-top: 1em;
+  margin-bottom: 3em;
+}
+ul.featured-cabins {
+  width: 60%;
+  margin: 0 auto;
+}
+ul.featured-cabins li {
+  margin-bottom: 3em;
+}
+.cabin-img {
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, .2);
+}
+.cabin-title {
+  font-size: 1.3em;
+  font-weight: bold;
+}
+.cabin-decs, ul.featured-cabins li p , .left p {
+  line-height: 1.9;
+  margin-bottom: 2em;
+  font-size: .8rem;
+}
+.cabin-cta {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+.cabin-cta::after {
+  position:absolute;
+  content: '';
+  background: white;
+  bottom: -12px;
+  width: 100%;
+  height: 1px;
+}
+.cabin-cta span {
+  color: white;
+  font-weight: bold;
+}
+.cabin-cta img {
+  width: 10px;
 }
