--- a/index.css
+++ b/index.css
@@ -111,7 +111,7 @@ ul.featured-cabins li {
   font-size: 1.3em;
   font-weight: bold;
 }
-.cabin-decs, ul.featured-cabins li p , .left p {
+.cabin-decs, ul.features li p , .left p {
   line-height: 1.9;
   margin-bottom: 2em;
   font-size: .8rem;
@@ -135,4 +135,97 @@ ul.featured-cabins li {
 }
 .cabin-cta img {
   width: 10px;
+}
+.feature-container {
+  background: #1A1A1A;
+  color: white;
+}
+ul.features {
+  margin: 3em auto;
+  width: 70%;
+}
+ul.features li img {
+  width: 40px;
+}
+ul.features li p {
+  color: #CCCCCC;
+}
+.main-quote {
+  font-family: 'Playfair Display', serif;
+  font-size: 2.2rem;
+  font-style: italic;
+  margin-bottom: .5em;
+}
+.main-cite {
+  margin-bottom: 3em;
+  display: block;
+}
+ul.testimonials {
+  margin: 3em 0;
+}
+ul.testimonials li {
+  margin-bottom: 3em;
+}
+.test-img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.test-desc {
+  font-family: 'Playfair Display', serif;
+  font-style: italic;
+}
+.test-auth {
+  font-size: .85rem;
+  font-weight: bold;
+}
+.last-container {
+  position: relative;
+}
+.fern {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  opacity: .1;
+  width: 80%;
+}
+@media (min-width: 550px) {
+  .menu, .exit {
+    display: none;
+  }
+  header {
+    padding: 1em;
+  }
+  ul.nav {
+    visibility: unset;
+    background: none;
+    position: unset;
+    opacity: 1;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    height: auto;
+  }
+  ul.nav li a {
+    font-size: .9rem;
+    font-weight: normal;
+    padding: 0 1em;
+  }
+  ul.nav li:last-child a{
+    padding-right: 0;
+  }
+  ul.nav .active a {
+    font-weight: bold;
+  }
+  ul.nav .res a {
+    color: #72A84A;
+    font-weight: bold;
+  }
+  ul.featured-cabins {
+    display: grid;
+    grid-gap: 3em;
+    grid-template-columns: repeat(3,auto);
+    width: 90%;
+  }
 }
